Package: aroma.light
====================

Version: 1.31.6 [2013-09-25]
o CLEANUP: Package now only imports 'matrixStats' (no longer attaches it).


Version: 1.31.5 [2013-09-23]
o ROBUSTNESS: Now properly declaring all S3 methods in the NAMESPACE file.
o SPEEDUP/CLEANUP: normalizeTumorBoost() now uses which() instead of
  whichVector() of 'R.utils'.  Before R (< 2.11.0), which() used to be
  10x slower than whichVector(), but now it's 3x faster.
o CLEANUP: Now only using 'Authors@R' in DESCRIPTION, which is possible
  since R (>= 2.14.0).  Hence the new requirement on the version of R.
o Bumped up package dependencies.


Version: 1.31.4 [2013-09-10]
o CLEANUP: Now package explicitly imports what it needs from matrixStats.
o Bumped up package dependencies.


Version: 1.31.3 [2013-05-25]
o SPEEDUP: Removed all remaining gc() calls, which were in
  normalizeQuantileSpline().
o SPEEDUP: Replaced all rm() calls with NULL assignments.
o Updated the package dependencies.


Version: 1.31.2 [2013-05-20]
o Same updates as in v1.30.2.


Version: 1.31.1 [2011-04-18]
o Same updates as in v1.30.1.


Version: 1.31.0 [2013-04-03]
o The version number was bumped for the Bioc devel version.


Version: 1.30.5 [2013-09-25]
o Backport from v1.31.5: Declaring all S3 methods in NAMESPACE. 
o Backport from v1.31.5: normalizeTumorBoost() now uses which(),
  which also removes one dependency on 'R.utils'.


Version: 1.30.4 [2013-09-25]
o Backport from v1.31.4: Now package explicitly imports what it 
  needs from matrixStats.


Version: 1.30.3 [2013-09-25]
o Backport from v1.31.3: Removal of all gc() calls and removal of
  variables is now faster.
o Removed one stray str() debug output in robustSmoothSpline().


Version: 1.30.2 [2013-05-20]
o CRAN POLICY: Now all Rd \usage{} lines are at most 90 characters long.


Version: 1.30.1 [2013-04-18]
o Now backtransformPrincipalCurve() preserves dimension names.
o BUG FIX: backtransformPrincipalCurve() gave an error if the