@@ -4,13 +4,7 @@
 
 
 .onAttach <- function(libname, pkgname) {
-  requireX <- base::require;
-  if (requireX("R.oo")) {
-    pkg <- Package(pkgname);
-    assign(pkgname, pkg, pos=getPosition(pkg));
-  }
-
-  pi <- utils::packageDescription(pkgname);
-  packageStartupMessage(pkgname, " v", pi$Version, " (", 
-    pi$Date, ") successfully loaded. See ?", pkgname, " for help."); 
+  pkg <- Package(pkgname);
+  assign(pkgname, pkg, pos=getPosition(pkg));
+  startupMessage(pkg);
 }
